src/test/deca/codegen/valid/objet/field_class_01Decompiled.deca
class A {
	int x;
}

class B {
	A a;
}

{
	A a = new A();
	println("a");
}
