src/test/deca/codegen/error/test_class_heap_overflow.deca
class HeavyClass {
int x;
int y;
int z;
}

{
HeavyClass heavy;
while(true){
heavy = new HeavyClass();
}

}
